[gd_scene load_steps=6 format=3 uid="uid://b3a1udt2uo74m"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_rt81e"]
[ext_resource type="Texture2D" uid="uid://byukwe2phwqtk" path="res://assets/GAHtHGRWkAA2Lyd.jpg" id="2_csm3m"]
[ext_resource type="Script" path="res://scripts/audio/audiomanager.gd" id="2_unjwx"]
[ext_resource type="Script" path="res://scripts/UI/options_window.gd" id="3_1pt81"]

[sub_resource type="LabelSettings" id="LabelSettings_caj4t"]
font_size = 50

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rt81e")

[node name="audio_manager" type="Node2D" parent="."]
script = ExtResource("2_unjwx")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="audio_manager"]

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="audio_manager"]

[node name="canvas" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="canvas"]
anchors_preset = -1
anchor_left = 0.434
anchor_top = 0.365
anchor_right = 0.566
anchor_bottom = 0.781
offset_left = -0.280029
offset_top = -0.200012
offset_right = 0.279907
offset_bottom = -0.480042
pivot_offset = Vector2(127, 225)
theme_override_constants/separation = 3
alignment = 1

[node name="newgame" type="Button" parent="canvas/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "NEW GAME"

[node name="loadgame" type="Button" parent="canvas/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "LOAD"

[node name="options" type="Button" parent="canvas/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "OPTIONS"

[node name="exit" type="Button" parent="canvas/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "QUIT"

[node name="load_window" type="PanelContainer" parent="canvas"]
visible = false
anchors_preset = -1
anchor_top = 0.059
anchor_right = 0.967
anchor_bottom = 0.956
offset_left = 64.0
offset_top = 0.279995
offset_right = -0.640137
offset_bottom = -0.47998
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="canvas/load_window"]
layout_mode = 2

[node name="close" type="Button" parent="canvas/load_window/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[node name="MarginContainer" type="MarginContainer" parent="canvas/load_window/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="loadcontainer" type="HBoxContainer" parent="canvas/load_window/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="VBoxContainer4" type="VBoxContainer" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.78

[node name="VBoxContainer" type="VBoxContainer" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.14
alignment = 1

[node name="Label" type="Label" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer/VBoxContainer4/VBoxContainer"]
layout_mode = 2
text = "LOAD"
label_settings = SubResource("LabelSettings_caj4t")
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer/VBoxContainer4/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "SAVE"

[node name="VBoxContainer" type="VBoxContainer" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_csm3m")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_csm3m")
expand_mode = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_csm3m")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_csm3m")
expand_mode = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_csm3m")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="canvas/load_window/VBoxContainer/MarginContainer/loadcontainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_csm3m")
expand_mode = 1

[node name="options_window" type="PanelContainer" parent="canvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_1pt81")

[node name="MarginContainer" type="MarginContainer" parent="canvas/options_window"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="canvas/options_window/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="canvas/options_window/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="close" type="Button" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="HBoxContainer2" type="HBoxContainer" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="canvas/options_window/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 13.4

[node name="Label" type="Label" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 36
text = "OPTIONS"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.25
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Sound"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
min_value = -50.0
max_value = 20.0

[node name="Label2" type="Label" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Music"
horizontal_alignment = 1

[node name="HSlider2" type="HSlider" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
min_value = -50.0
max_value = 20.0

[node name="VBoxContainer2" type="VBoxContainer" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Window Resolution"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
item_count = 2
allow_reselect = true
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1

[connection signal="pressed" from="canvas/VBoxContainer/newgame" to="." method="_on_newgame_pressed"]
[connection signal="pressed" from="canvas/VBoxContainer/loadgame" to="." method="_on_loadgame_pressed"]
[connection signal="pressed" from="canvas/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="canvas/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="canvas/load_window/VBoxContainer/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/close" to="canvas/options_window" method="_on_close_pressed"]
[connection signal="value_changed" from="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HSlider" to="canvas/options_window" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HSlider2" to="canvas/options_window" method="_on_h_slider_2_value_changed"]
[connection signal="item_selected" from="canvas/options_window/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/OptionButton" to="canvas/options_window" method="_on_option_button_item_selected"]
